--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,14 +1,14 @@
 schema_version = "1.0.0"
 
 id = "SB_path_actions"
-version = "2.0.10"
+version = "2.0.11"
 name = "Path Actions"
 tagline = "Open blend folder in OS explorer, and more"
 maintainer = "Samuel Bernou <bernou.samuel@gmail.com>"
 type = "add-on"
 
 # Open folders, copy blender paths to clipboard
-# permissions = ["files", "clipboard"]
+permissions = ["files", "clipboard"]
 
 website = "https://github.com/Pullusb/SB_path_actions"
 tags = ["System", "Development"]
